exports[`ErrorMessage component should render correctly with a supplied icon 1`] = `
<div
  className="errorMessage">
  <div
    className="errorMessage__text">
    <i
      className="fa fa-fa-bolt "
      style={
        Object {
          "transition": "all 200ms ease-out",
        }
      } />
    <p
      className="errorMessage__friendly">
      Something happened!
    </p>
  </div>
</div>
`;

exports[`ErrorMessage component should render correctly with an error message 1`] = `
<div
  className="errorMessage">
  <div
    className="errorMessage__text">
    <i
      className="fa fa-exclamation-circle "
      style={
        Object {
          "transition": "all 200ms ease-out",
        }
      } />
    <p
      className="errorMessage__friendly">
      some string message
    </p>
  </div>
</div>
`;

exports[`ErrorMessage component should render correctly with an error message and details 1`] = `
<div
  className="errorMessage">
  <div
    className="errorMessage__text">
    <i
      className="fa fa-exclamation-circle "
      style={
        Object {
          "transition": "all 200ms ease-out",
        }
      } />
    <a
      className="errorMessage__link"
      onClick={[Function]}>
      View Details
    </a>
    <p
      className="errorMessage__friendly">
      some string message
    </p>
  </div>
</div>
`;

exports[`ErrorMessage component should render the default message with no props 1`] = `
<div
  className="errorMessage">
  <div
    className="errorMessage__text">
    <i
      className="fa fa-exclamation-circle "
      style={
        Object {
          "transition": "all 200ms ease-out",
        }
      } />
    <p
      className="errorMessage__friendly">
      Something happened!
    </p>
  </div>
</div>
`;
